# coingecko_api

./: Cargo.toml  README.md
src/: api_call.rs  main.rs
